apps/mqtt-explorer/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqtt-explorer
  namespace: mqtt-explorer
spec:
  selector:
    app: mqtt-explorer
  ports:
    - name: main
      port: 4000
      targetPort: 4000
