apps/mqtt-explorer/overlays/prod/ingress-route-ext.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: mqtt-explorer-ingress-ext
  namespace: mqtt-explorer
spec:
  entryPoints:
    - websecure-ext
  routes:
    - match: Host(`mqtt.sobrinho.pt`)
      kind: Rule
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
      services:
        - name: mqtt-explorer
          port: main
