apps/mqtt-explorer/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: mqtt-explorer-ingress
  namespace: mqtt-explorer
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`mqtt.sobrinho.pt`)
      kind: Rule
      services:
        - name: mqtt-explorer
          port: main
